[gd_scene load_steps=17 format=3 uid="uid://cvxshxkyhi8hw"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_eim3k"]
[ext_resource type="Script" path="res://Scripts/torch.gd" id="2_ke26v"]
[ext_resource type="PackedScene" uid="uid://snt3ph36f5q7" path="res://Scenes/wood.tscn" id="4_2yrv3"]
[ext_resource type="Script" path="res://Scripts/light_detector.gd" id="4_dg4wy"]
[ext_resource type="PackedScene" uid="uid://cn4hr0bil5m4w" path="res://Scenes/fire.tscn" id="5_75gn3"]
[ext_resource type="AudioStream" uid="uid://c1jf3aocrjg3t" path="res://SFX/Attack.wav" id="6_2m7vx"]
[ext_resource type="AudioStream" uid="uid://dahkfhtppw25t" path="res://SFX/Ignite.wav" id="7_o736o"]
[ext_resource type="Script" path="res://Scripts/polygon_2d.gd" id="8_05qto"]
[ext_resource type="PackedScene" uid="uid://d3gd32e0xvjdn" path="res://Scenes/burning_torch.tscn" id="9_4j0un"]

[sub_resource type="Animation" id="Animation_nnyfx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D/Torch:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/Torch:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(25, -7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterBody2D/Torch/AttackArea/CollisionShape2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CharacterBody2D/Torch/Polygon2D/Burning:local_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7i1m7"]
resource_name = "torch_attack"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D/Torch:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.666667, 0.766667, 0.833333, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.816814, 1.14319, 0.490438, 0.000872423, -0.488692, -0.715585, 0.000872423, 0.490438, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/Torch:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.666667, 0.766667, 0.833333, 0.966667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(35, -10), Vector2(40, 15), Vector2(41, 18), Vector2(36, -29), Vector2(1.99998, -40), Vector2(-32, -35), Vector2(-35, -25), Vector2(1.99998, -40), Vector2(36, -29), Vector2(35, -10), Vector2(25, -7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterBody2D/Torch/AttackArea/CollisionShape2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CharacterBody2D/Torch/AttackArea")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [true],
"method": &"disable"
}, {
"args": [false],
"method": &"disable"
}, {
"args": [true],
"method": &"disable"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CharacterBody2D/Torch/Polygon2D/Burning:local_coords")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p03dh"]
_data = {
"RESET": SubResource("Animation_nnyfx"),
"torch_attack": SubResource("Animation_7i1m7")
}

[sub_resource type="Gradient" id="Gradient_6ecf7"]
offsets = PackedFloat32Array(0, 0.974026)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_47ay5"]
gradient = SubResource("Gradient_6ecf7")
width = 750
height = 750
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.85, 0.85)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_52gpt"]
size = Vector2(23, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qgppn"]
size = Vector2(36, 35)

[node name="CharacterBody2D" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
collision_mask = 7
script = ExtResource("1_eim3k")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Torch" type="Node2D" parent="."]
position = Vector2(35, -10)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Torch"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_p03dh")
}

[node name="PointLight2D" type="PointLight2D" parent="Torch"]
position = Vector2(1, -11)
shadow_enabled = true
texture = SubResource("GradientTexture2D_47ay5")
script = ExtResource("2_ke26v")
light_levels = Array[int]([250, 225, 300, 375, 450, 525, 600, 675, 750])

[node name="Timer" type="Timer" parent="Torch/PointLight2D"]
wait_time = 5.0

[node name="Polygon2D" type="Polygon2D" parent="Torch"]
color = Color(0.588235, 0.309804, 0, 1)
polygon = PackedVector2Array(-2, 12, 4, 12, 4, -10, -2, -10)

[node name="Burning" parent="Torch/Polygon2D" instance=ExtResource("9_4j0un")]
position = Vector2(1, -10)
local_coords = true

[node name="AttackArea" type="Area2D" parent="Torch"]
collision_mask = 4
script = ExtResource("4_dg4wy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torch/AttackArea"]
visible = false
position = Vector2(1.5, -12)
shape = SubResource("RectangleShape2D_52gpt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 0.5)
shape = SubResource("RectangleShape2D_qgppn")

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
color = Color(1, 0, 1, 1)
polygon = PackedVector2Array(-15, -16, 19, -16, 19, 18, -16, 18)

[node name="BonfireIndicator" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.671)

[node name="wood" parent="BonfireIndicator" instance=ExtResource("4_2yrv3")]
position = Vector2(0, -77)
scale = Vector2(0.2, 0.2)

[node name="Fire" parent="BonfireIndicator" instance=ExtResource("5_75gn3")]
position = Vector2(0, -77)
scale = Vector2(0.2, 0.2)

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_2m7vx")

[node name="IgniteSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_o736o")

[node name="CharacterVisuals" type="Node2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="CharacterVisuals"]
color = Color(0.647059, 0.384314, 0.262745, 1)
polygon = PackedVector2Array(-17, -18, 21, -18, 21, 19, -17, 19)
script = ExtResource("8_05qto")
radius = 25

[node name="Polygon2D4" type="Polygon2D" parent="CharacterVisuals"]
position = Vector2(0, -30)
color = Color(0.937255, 0.227451, 0.0470588, 1)
polygon = PackedVector2Array(-5, -5, 6, -6, 6, 6, -5, 6)
script = ExtResource("8_05qto")
radius = 10

[node name="Polygon2D2" type="Polygon2D" parent="CharacterVisuals"]
position = Vector2(0, -13)
color = Color(0.937255, 0.227451, 0.0470588, 1)
polygon = PackedVector2Array(-5, -5, 6, -6, 6, 6, -5, 6)
script = ExtResource("8_05qto")
radius = 15

[node name="Polygon2D5" type="Polygon2D" parent="CharacterVisuals"]
position = Vector2(0, -1)
scale = Vector2(1.67174, 1.06519)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-8.44922, 3.75521, 12, 4, 12, 29, -8.44922, 29.1029)

[node name="Polygon2D3" type="Polygon2D" parent="CharacterVisuals"]
scale = Vector2(1.60643, 1)
color = Color(0.447059, 0.254902, 0.0745098, 1)
polygon = PackedVector2Array(-8, 4, 12, 4, 12, 29, -8, 29)

[node name="Polygon2D6" type="Polygon2D" parent="CharacterVisuals"]
scale = Vector2(1.61351, 1)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-8, 10, -1, 19, 4, 19, 12, 10, 12, 8, 4, 17, 0, 17, -8, 8)

[connection signal="area_entered" from="Torch/AttackArea" to="Torch/AttackArea" method="_on_area_entered"]
